--- a/composer.json
+++ b/composer.json
@@ -32,13 +32,16 @@
             "dont-discover": []
         }
     },
-    "autoload": {
+     "autoload": {
         "psr-4": {
             "App\\": "app/"
         },
         "classmap": [
             "database/seeds",
             "database/factories"
+        ],
+        "files": [
+            "app/helpers.php"
         ]
     },
     "autoload-dev": {
